--- a/ProjectKTS/webchat/templates/base.html
+++ b/ProjectKTS/webchat/templates/base.html
@@ -21,49 +21,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">FMchat</a>
+                <a class="navbar-brand" href="{% url 'webchat:room'%}">FM Chat</a>
                 <ul class="nav navbar-nav">
-                    <li class="active">
-                        <a href="#">Link</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="#">Action</a>
-                            </li>
-                            <li>
-                                <a href="#">Another action</a>
-                            </li>
-                            <li>
-                                <a href="#">Something else here</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a href="#">Separated link</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a href="#">One more separated link</a>
-                            </li>
-                        </ul>
-                    </li>
                 </ul>
             </div>
 
 
-            <!-- Группируем ссылки, формы, выпадающее меню и прочие элементы -->
+            {% if open_chat %}
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>
-
+              chat
             </div>
+            {%else%}
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            </div>
+            {% endif %}
+            <div>
             {% if request.user.is_authenticated %}
             <ul class="navbar-nav ml-auto mr-5">
                 <li class="nav-item">
@@ -97,11 +69,11 @@
                 </button>
             </div>
             {% endif %}
-
-
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container-fluid -->
+
+
+
+        </div>
 
     </nav>
 
